# gr-serial

./: .CMakeLists.txt.swp  .gr_networking.cpp.swp  CMakeLists.txt  MANIFEST.md  README.md  gr_networking.cpp  gr_networking_source.cpp
cmake/Modules/: serialConfig.cmake
docs/: README.serial
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
example/: .read_serial.cpp.swp  CMakeLists.txt  read_serial.cpp  write_serial.cpp
example/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
example/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
grc/: CMakeLists.txt  serial_serial_block.xml
include/CppLinuxSerial/: .SerialPort.hpp.swp
include/serial/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_serial.cc  qa_serial.h  test_serial.cc
python/: CMakeLists.txt  __init__.py  qa_serial_block.py  serial_block.py
src/: .SerialPort.cpp.swp  CMakeLists.txt  SerialPort.cpp
swig/: CMakeLists.txt  serial_swig.i
